게시판 상세보기, 수정, 삭제 추가

--- a/back_workspace/boot_workspace/XmlApp/src/main/resources/templates/board/list.html
+++ b/back_workspace/boot_workspace/XmlApp/src/main/resources/templates/board/list.html
@@ -18,10 +18,13 @@
         <tbody>
             <tr th:each="board: ${boardList}">
                 <td>1</td>
-                <td th:text="${board.title}"></td>
+                <td><a th:text="${board.title}" th:href="@{|/board/detail?board_id=${board.board_id}|}"></a></td>
                 <td th:text="${board.writer}"></td>
                 <td th:text="${board.regdate}"></td>
                 <td th:text="${board.hit}"></td>
+            </tr>
+            <tr colspan="5">
+                <button onclick="location.href='/board/registform';">글 등록</button>
             </tr>
         </tbody>
     </table>
