공공데이터 활용 및 구글맵 연동

--- a/back_workspace/boot_workspace/XmlApp/src/main/resources/templates/board/content.html
+++ b/back_workspace/boot_workspace/XmlApp/src/main/resources/templates/board/content.html
@@ -87,7 +87,9 @@
 
             //삭제 버튼
             $("#delete").click(()=>{
-                del();
+                if(confirm("삭제하시겠어요?")){
+                    del();
+                }
             });
 
             $("#list").click(()=>{
