--- a/back_workspace/boot_workspace/electroshop/src/main/resources/templates/electro/product.html
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/templates/electro/product.html
@@ -35,6 +35,7 @@
 		<![endif]-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
     </head>
 	<body>
         <div id="app">
@@ -126,6 +127,7 @@
                         <div class="col-md-5">
                             <div class="product-details">
                                 <h2 class="product-name" th:text="${product.product_name}"></h2>
+                                <input type="hidden" id="product_id" th:value="${product.product_id}">
                                 <div>
                                     <div class="product-rating">
                                         <i class="fa fa-star"></i>
@@ -206,7 +208,7 @@
                                 <!-- product tab content -->
                                 <div class="tab-content">
                                     <!-- tab1  -->
-                                    <div id="tab1" class="tab-pane fade in active">
+                                    <div id="tab1" class="tab-pane fade in">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -226,97 +228,14 @@
                                     <!-- /tab2  -->
 
                                     <!-- tab3  -->
-                                    <div id="tab3" class="tab-pane fade in">
+                                    <div id="tab3" class="tab-pane fade in active">
                                         <div class="row">
-                                            <!-- Rating -->
-                                            <div class="col-md-3">
-                                                <div id="rating">
-                                                    <div class="rating-avg">
-                                                        <span>4.5</span>
-                                                        <div class="rating-stars">
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star-o"></i>
-                                                        </div>
-                                                    </div>
-                                                    <ul class="rating">
-                                                        <li>
-                                                            <div class="rating-stars">
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                            </div>
-                                                            <div class="rating-progress">
-                                                                <div style="width: 80%;"></div>
-                                                            </div>
-                                                            <span class="sum">3</span>
-                                                        </li>
-                                                        <li>
-                                                            <div class="rating-stars">
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                            </div>
-                                                            <div class="rating-progress">
-                                                                <div style="width: 60%;"></div>
-                                                            </div>
-                                                            <span class="sum">2</span>
-                                                        </li>
-                                                        <li>
-                                                            <div class="rating-stars">
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                            </div>
-                                                            <div class="rating-progress">
-                                                                <div></div>
-                                                            </div>
-                                                            <span class="sum">0</span>
-                                                        </li>
-                                                        <li>
-                                                            <div class="rating-stars">
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                            </div>
-                                                            <div class="rating-progress">
-                                                                <div></div>
-                                                            </div>
-                                                            <span class="sum">0</span>
-                                                        </li>
-                                                        <li>
-                                                            <div class="rating-stars">
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                                <i class="fa fa-star-o"></i>
-                                                            </div>
-                                                            <div class="rating-progress">
-                                                                <div></div>
-                                                            </div>
-                                                            <span class="sum">0</span>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                            <!-- /Rating -->
 
                                             <!-- Reviews -->
-                                            <div class="col-md-6">
+                                            <div class="col-md-9">
                                                 <div id="reviews">
                                                     <ul class="reviews">
-                                                        <li>
+                                                        <li  v-for="message in messages">
                                                             <div class="review-heading">
                                                                 <h5 class="name">John</h5>
                                                                 <p class="date">27 DEC 2018, 8:0 PM</p>
@@ -332,38 +251,7 @@
                                                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                                                             </div>
                                                         </li>
-                                                        <li>
-                                                            <div class="review-heading">
-                                                                <h5 class="name">John</h5>
-                                                                <p class="date">27 DEC 2018, 8:0 PM</p>
-                                                                <div class="review-rating">
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star-o empty"></i>
-                                                                </div>
-                                                            </div>
-                                                            <div class="review-body">
-                                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                                            </div>
-                                                        </li>
-                                                        <li>
-                                                            <div class="review-heading">
-                                                                <h5 class="name">John</h5>
-                                                                <p class="date">27 DEC 2018, 8:0 PM</p>
-                                                                <div class="review-rating">
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star-o empty"></i>
-                                                                </div>
-                                                            </div>
-                                                            <div class="review-body">
-                                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                                            </div>
-                                                        </li>
+
                                                     </ul>
                                                     <ul class="reviews-pagination">
                                                         <li class="active">1</li>
@@ -377,12 +265,10 @@
                                             <!-- /Reviews -->
 
                                             <!-- Review Form -->
-                                            <div class="col-md-3">
+                                            <div class="col-md-3" v-if="connected">
                                                 <div id="review-form">
                                                     <form class="review-form">
-                                                        <input class="input" type="text" placeholder="Your Name">
-                                                        <input class="input" type="email" placeholder="Your Email">
-                                                        <textarea class="input" placeholder="Your Review"></textarea>
+                                                        <textarea class="input" placeholder="Your Chatting"></textarea>
                                                         <div class="input-rating">
                                                             <span>Your Rating: </span>
                                                             <div class="stars">
@@ -393,9 +279,12 @@
                                                                 <input id="star1" name="rating" value="1" type="radio"><label for="star1"></label>
                                                             </div>
                                                         </div>
-                                                        <button class="primary-btn">Submit</button>
+                                                        <button class="primary-btn">메시지 전송</button>
                                                     </form>
                                                 </div>
+                                            </div>
+                                            <div v-else>
+                                                <button class="primary-btn" type="button" @click="connect">서버 접속하기</button>
                                             </div>
                                             <!-- /Review Form -->
                                         </div>
@@ -579,22 +468,38 @@
                 setup(){
                     const productList = reactive([]);
 
-                    const getProduct=()=>{
-                        $.ajax({
-                            url: "/product/list",
-                            method: "get",
-                            success: (data=>{
-                               productList.splice(0);
-                               data.forEach(item=>{
-                                   productList.push(item);
-                               });
-                            })
+                    //STOMP 객체 선언
+                    let stompClient = null;
+                    const connected = ref(false);
+
+                    const messages = ref([1,2,3,4,5,6,7,8,9]);   //누적 채팅메시지
+
+                    //WebSocket 서버 접속
+                    const connect = ()=>{
+                        const websocket = new WebSocket("ws://localhost:9999/ws");
+                        stompClient = Stomp.over(websocket);    //웹소켓 위에 Stomp 얹혀 쓰기
+
+                        //stomp를 이용한 서버 연결 시도
+                        stompClient.connect({}, ()=>{
+                            //서버에 연결되면 이 콜백함수가 호출된다.
+                            connected.value = true;
+                            console.log("STOMP로 서버 연결 성공");
+
+                            //구독하기
+                            stompClient.subscribe("/topic/connected", (message)=>{
+                                console.log("다른 사용자도 접속함: ", JSON.parse(message.body));
+                            });
+
+                            //접속 후, 서버에 메시지 보내기
+                            stompClient.send("/app/connect", {}, JSON.stringify({
+                                content: $("#product_id").val()
+                            }));
                         });
                     }
 
-                    getProduct();
 
-                    return {productList, getProduct}
+                    return {productList, connected, messages,
+                        connect}
                 }
             }).mount("#app");
         </script>
