--- a/back_workspace/boot_workspace/electroshop/src/main/resources/templates/store/fragments/side_navi.html
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/templates/store/fragments/side_navi.html
@@ -48,7 +48,13 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="/admin/index.html" class="nav-link active">
+                                <a href="/store/product/list" class="nav-link active">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>상품현황</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/store/product/registform" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>상품등록</p>
                                 </a>
