--- a/back_workspace/boot_workspace/electroshop/src/main/resources/templates/store/product/detail.html
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/templates/store/product/detail.html
@@ -50,7 +50,7 @@
     <div class="col-md-6" style="margin: auto">
         <div class="card card-secondary">
             <div class="card-header">
-                <h3 class="card-title">상품 등록하기</h3>
+                <h3 class="card-title">상품 상세보기</h3>
 
                 <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -61,17 +61,21 @@
             <div class="card-body">
                 <div class="form-group">
                     <label for="inputEstimatedBudget">상품 이름</label>
-                    <input type="text" name="product_name" id="inputEstimatedBudget" class="form-control" placeholder="상품명 입력">
+                    <input type="text" name="product_name" id="inputEstimatedBudget" class="form-control" placeholder="상품명 입력" th:value="${product.product_name}">
                 </div>
                 <div class="form-group">
                     <label for="inputSpentBudget">상품 가격</label>
-                    <input type="number" name="price" id="inputSpentBudget" class="form-control" placeholder="상품 가격 입력">
+                    <input type="number" name="price" id="inputSpentBudget" class="form-control" placeholder="상품 가격 입력" th:value="${product.price}">
                 </div>
                 <div class="form-group">
                     <label for="inputEstimatedDuration">브랜드명</label>
-                    <input type="text" name="brand" id="inputEstimatedDuration" class="form-control" placeholder="브랜드명 입력">
+                    <input type="text" name="brand" id="inputEstimatedDuration" class="form-control" placeholder="브랜드명 입력" th:value="${product.brand}">
                 </div>
-                <button type="button" class="btn btn-block btn-dark" id="bt_regist">등록하기</button>
+                <div class="form-group">
+                    <label for="inputEstimatedDuration">상점</label>
+                    <input type="text" name="brand" id="inputEstimated" class="form-control" placeholder="브랜드명 입력" th:value="${product.store.store_name}">
+                </div>
+                <button type="button" class="btn btn-block btn-dark" id="bt_regist">목록 보기</button>
             </div>
             <!-- /.card-body -->
         </div>
@@ -125,24 +129,11 @@
 <script src="/admin/dist/js/pages/dashboard.js"></script>
 
 <script>
-    function regist(){
-        console.log($("#form1").serialize());
-
-        $.ajax({
-            url:"/store/product/regist",
-            method:"POST",
-            data:$("#form1").serialize(),
-            success:function(data){
-                console.log(data);
-                location.href="/store/product/listform";
-            }
-        });
-    }
 
     $(()=>{
         $("#bt_regist").click(()=>{
             console.log("버튼 눌림");
-            regist();
+            location.href="/store/product/list";
         });
     });
 </script>
