--- a/back_workspace/boot_workspace/electroshop/src/main/resources/templates/electro/index.html
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/templates/electro/index.html
@@ -56,15 +56,15 @@
                     <!-- row -->
                     <div class="row">
                         <!-- shop -->
-                        <div class="col-md-4 col-xs-6" v-for="product in productList" :key="product.product_id">
+                        <div class="col-md-4 col-xs-6" v-for="product in productList" :key="product.productId">
                             <div class="shop">
                                 <div class="shop-img">
                                     <img src="/electro/img/shop01.png" alt="">
                                 </div>
                                 <div class="shop-body">
-                                    <h3>{{product.product_name}}</h3>
-                                    <h5>{{product.store.store_name}}</h5>
-                                    <a :href="'/product/detail?product_id='+product.product_id" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+                                    <h3>{{product.productName}}</h3>
+                                    <h5>{{product.store.storeName}}</h5>
+                                    <a :href="'/product/detail?productId='+product.productId" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
                                 </div>
                             </div>
                         </div>
