--- a/back_workspace/boot_workspace/electroshop/src/main/resources/templates/store/product/regist.html
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/templates/store/product/regist.html
@@ -72,6 +72,7 @@
                     <input type="text" name="brand" id="inputEstimatedDuration" class="form-control" placeholder="브랜드명 입력">
                 </div>
                 <button type="button" class="btn btn-block btn-dark" id="bt_regist">등록하기</button>
+                <button type="button" class="btn btn-block btn-dark" id="bt_list">목록보기</button>
             </div>
             <!-- /.card-body -->
         </div>
@@ -143,6 +144,11 @@
         $("#bt_regist").click(()=>{
             console.log("버튼 눌림");
             regist();
+        });
+
+        $("#bt_list").click(()=>{
+            console.log("버튼 눌림");
+            location.href="/store/product/list";
         });
     });
 </script>
